data/derived/sp14/progs/unify/prog4927.ml.out
Characters 265-286:
  removeZero (add (padZero 0::l1 0::l2));;
                  ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int list * int list
